dockerfiles, slight api changes, and shell file to test containerization adn load balancer
